fix: Critical security and import path fixes from CodeRabbit review
Security fixes:
- Remove hardcoded DSN credentials from db.yaml, use environment variables
- Fix .gitignore to only exclude test artifacts, not test source files
- Fix keywords field in arxiv_search_minimal.yaml (empty list instead of empty string)

Import path fixes:
- Update all imports from tools.arxiv.pipelines.arango_db_manager to core.database.arango_db_manager
- Fix incorrect import in demo_github_pipeline.py

These changes address critical security vulnerabilities and broken imports identified by CodeRabbit.

--- a/.gitignore
+++ b/.gitignore
@@ -367,5 +367,9 @@ experiments/*/embeddings/*_embeddings.json
 Acheron/
 Acheron/*
 logs/
-tests/*
+# Test artifacts only, not test source files
+tests/*.log
+tests/.cache/
+tests/__pycache__/
+tests/*.pyc
 tools/arxiv/scripts/data/*
