--- a/tools/arxiv/configs/arxiv_search_minimal.yaml
+++ b/tools/arxiv/configs/arxiv_search_minimal.yaml
@@ -11,7 +11,7 @@ search:
     - cs.LG    # Machine Learning only
   
   # No keywords
-  keywords: ""
+  keywords: []
   
   # Sampling configuration
   sampling:
